insidebox (1)/css/styles.css
:root {
    --heading-grey: #727B81;
    --menu-grey: #666F74;
    --accent-blue: #0A91DE;
    --border-grey: #DDDDDD;
    --nunito-font: "Nunito", sans-serif;
    --manrope-font: "Manrope", sans-serif;
}

/* Utility */

body {
    background-color: #FFFFFF;
}

.flex {
    display: flex;
    height: 100vh;
}

header {
    flex: 0 0 14.5rem;
    background-color: #FFFFFF;
    border: 1px solid var(--border-grey);
    padding: 1rem;
}

.inner-container {
    width: 77.5rem;
    margin: 0 auto;
    background-color: #EEEEEE;
}

.flex-container {
    display: flex;
    flex-flow: column wrap;
}

svg {
    width: 1.6875rem;
    height: auto;
}

ul {
    list-style: none;
    padding: 0;
}

.main-menu {
    gap: 1.5rem;
}

/* Typography */

body {
    font-family: var(--manrope-font);
    color: var(--menu-grey);
}

h1 {
    font-family: var(--nunito-font);
    color: var(--heading-grey);
    font-weight: 700;
    font-size: 1.25rem;
    letter-spacing: -3%;
    line-height: 1.5;
    margin-bottom: .5rem;
}

h1 span {
    color: var(--accent-blue);
}

header > p {
    color: var(--heading-grey);
    font-weight: 700;
    font-size: 1.5rem;
    width: 100%;
    border-bottom: 1px solid var(--border-grey);
    padding-bottom: .5rem;
    margin-bottom: 1.5rem;
    line-height: 1.5;
}

.main-menu li a {
    color: var(--menu-grey);
    font-size: 1.125rem;
    font-weight: 500;
    line-height: 1.5;
    text-decoration: none;
    display: flex;
    align-items: center;
    column-gap: .5rem;
}

/* Sub-menu */

.main-menu > li {
    position: relative;
}

.sub-menu {
    position: absolute;
    z-index: 1;
    right: -7rem;
    top: -1.125rem;
    background-color: #FFFFFF;
    border: 1px solid var(--accent-blue);
    border-radius: .4375rem;
    padding: 1.125rem;
    width: 10.875rem;
    display: flex;
    flex-flow: column wrap;
    visibility: hidden;
    opacity: 0;
    box-shadow: 0 4px 4px 0 var(--border-grey);
}

.sub-menu li:not(.sub-menu li:last-of-type) {
    margin-bottom: .5rem;
    padding-bottom: .5rem;
    border-bottom: 1px solid var(--border-grey);
}

.main-menu li:first-of-type:hover .sub-menu,
.main-menu li:first-of-type:focus .sub-menu {
    visibility: visible;
    opacity: 1;
}

/* Hover/Focus States */

li a:hover,
li a:focus {
    font-weight: 700;
}

